fix code format

--- a/assets/html/partials/aboutus/delivery.html
+++ b/assets/html/partials/aboutus/delivery.html
@@ -16,7 +16,7 @@
                     <p>О нас</p>
                 </div>
             </a>
-            <a  href="delivery.html" class="aboutus__header_item active">
+            <a href="delivery.html" class="aboutus__header_item active">
                 <div class="aboutus__header_item_img">
                     <img src="img/aboutus/2.svg" alt="">
                 </div>
@@ -24,7 +24,7 @@
                     <p>Доставка и оплата</p>
                 </div>
             </a>
-            <a  href="obmen.html" class="aboutus__header_item">
+            <a href="obmen.html" class="aboutus__header_item">
                 <div class="aboutus__header_item_img">
                     <img src="img/aboutus/3.svg" alt="">
                 </div>
@@ -32,7 +32,7 @@
                     <p>Обмен и возврат</p>
                 </div>
             </a>
-            <a  href="contacts.html" class="aboutus__header_item">
+            <a href="contacts.html" class="aboutus__header_item">
                 <div class="aboutus__header_item_img">
                     <img src="img/aboutus/4.svg" alt="">
                 </div>
@@ -40,7 +40,7 @@
                     <p>Контакты</p>
                 </div>
             </a>
-        </div>    
+        </div>
     </div>
     <div class="aboutus__wrap">
         <div class="container">
@@ -54,7 +54,10 @@
                 <p>Минимальный оптовый заказ – один ящик.</p>
             </div>
             <div class="aboutus__subtitle">
-                <p>Звоните, чтобы оформить покупку, в любое удобное для вас время. Соберем максимально оперативно и отправим подходящим для вас способом Новой Почтой или другой почтовой службой. При заказе от 20 ящиков доставим заказ за наш счет (кроме шлепанцев из материала ЭВА, ПВХ)! Ответственность за сохранность товара в процессе доставки несет компания-перевозчик.</p>
+                <p>Звоните, чтобы оформить покупку, в любое удобное для вас время. Соберем максимально оперативно и
+                    отправим подходящим для вас способом Новой Почтой или другой почтовой службой. При заказе от 20
+                    ящиков доставим заказ за наш счет (кроме шлепанцев из материала ЭВА, ПВХ)! Ответственность за
+                    сохранность товара в процессе доставки несет компания-перевозчик.</p>
             </div>
             <div class="aboutus__list_title">
                 <p>Способы оплаты:</p>
@@ -66,10 +69,13 @@
                         Сумму сообщит наш менеджер по телефону после формирования заказа.</li>
                     <li>
                         <span>Наложенный платеж (по предоплате 15%). </span>
-                        Все просто – оплачиваете небольшой процент от суммы покупки и мы отправляем ваш заказ. При получении доплачиваете оставшиеся деньги и проверяете полученный товар.</li>
+                        Все просто – оплачиваете небольшой процент от суммы покупки и мы отправляем ваш заказ. При
+                        получении доплачиваете оставшиеся деньги и проверяете полученный товар.</li>
                     <li>
                         <span>Наложенный платеж без предоплаты. </span>
-                        Специально для наших постоянных клиентов! Отправляем ваш заказ наложенным платежом без предоплаты! Деньги вы вносите уже после получения товара. Просим обязательно сообщить нам о том, что оплатили покупку, и сохранить чек.</li>
+                        Специально для наших постоянных клиентов! Отправляем ваш заказ наложенным платежом без
+                        предоплаты! Деньги вы вносите уже после получения товара. Просим обязательно сообщить нам о том,
+                        что оплатили покупку, и сохранить чек.</li>
                 </ul>
             </div>
         </div>
