--- a/assets/html/partials/aboutus/obmen.html
+++ b/assets/html/partials/aboutus/obmen.html
@@ -16,7 +16,7 @@
                     <p>О нас</p>
                 </div>
             </a>
-            <a  href="delivery.html" class="aboutus__header_item">
+            <a href="delivery.html" class="aboutus__header_item">
                 <div class="aboutus__header_item_img">
                     <img src="img/aboutus/2.svg" alt="">
                 </div>
@@ -24,7 +24,7 @@
                     <p>Доставка и оплата</p>
                 </div>
             </a>
-            <a  href="obmen.html" class="aboutus__header_item active">
+            <a href="obmen.html" class="aboutus__header_item active">
                 <div class="aboutus__header_item_img">
                     <img src="img/aboutus/3.svg" alt="">
                 </div>
@@ -32,7 +32,7 @@
                     <p>Обмен и возврат</p>
                 </div>
             </a>
-            <a  href="contacts.html" class="aboutus__header_item">
+            <a href="contacts.html" class="aboutus__header_item">
                 <div class="aboutus__header_item_img">
                     <img src="img/aboutus/4.svg" alt="">
                 </div>
@@ -40,7 +40,7 @@
                     <p>Контакты</p>
                 </div>
             </a>
-        </div>    
+        </div>
     </div>
     <div class="aboutus__wrap">
         <div class="container">
@@ -50,21 +50,26 @@
             <div class="aboutus__list">
                 <ul>
                     <li>
-                        При получении товара обязательно вскрывайте упаковку и проверяйте его состояние 
-                        в присутствии сотрудника компании-доставщика. Напоминаем: ответственность 
+                        При получении товара обязательно вскрывайте упаковку и проверяйте его состояние
+                        в присутствии сотрудника компании-доставщика. Напоминаем: ответственность
                         за сохранность товара в процессе доставки несет перевозчик.
                     </li>
                     <li>
-                        При обнаружении недостачи необходимо сразу написать заявление в офисе транспортной компании.</li>
-                    <li>
-                        Если в партии обнаружили фабричный брак или распаровку – сфотографируйте товар и отправьте нам на почту с заявлением о возврате. Сделать это нужно в течение трех дней 
-                        с момента получения товара. Отметим, что запах обуви не считается критерием качества. Если он покажется вам неприятным, сделать замену не сможем.
+                        При обнаружении недостачи необходимо сразу написать заявление в офисе транспортной компании.
                     </li>
                     <li>
-                        Мы решаем все проблемные ситуации оперативно. Если вы действительно получили товар ненадлежащего качества – вернем деньги на карту, вычтем из суммы следующего заказа или обменяем на такую же пару нормального качества.
+                        Если в партии обнаружили фабричный брак или распаровку – сфотографируйте товар и отправьте нам
+                        на почту с заявлением о возврате. Сделать это нужно в течение трех дней
+                        с момента получения товара. Отметим, что запах обуви не считается критерием качества. Если он
+                        покажется вам неприятным, сделать замену не сможем.
                     </li>
                     <li>
-                        Если обувь была в эксплуатации, не сохранился ее товарный вид и фабричная упаковка, 
+                        Мы решаем все проблемные ситуации оперативно. Если вы действительно получили товар ненадлежащего
+                        качества – вернем деньги на карту, вычтем из суммы следующего заказа или обменяем на такую же
+                        пару нормального качества.
+                    </li>
+                    <li>
+                        Если обувь была в эксплуатации, не сохранился ее товарный вид и фабричная упаковка,
                         мы, к сожалению, не сможем удовлетворить запрос о возврате средств.
                     </li>
                 </ul>
