--- a/assets/html/partials/footer.html
+++ b/assets/html/partials/footer.html
@@ -1,85 +1,94 @@
-         <footer>
-             <div class="footer-wrapper">
-                <div class="footer-nav-list">
-                    <div class="footer-nav-list_item">
-                        <p>Информация 
-                            <span>
-                                <svg width="9" height="5" viewBox="0 0 9 5" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M0.146447 0.146447C0.320013 -0.0271197 0.589437 -0.0464049 0.784306 0.0885912L0.853553 0.146447L4.5 3.793L8.14645 0.146447C8.32001 -0.0271197 8.58944 -0.0464049 8.78431 0.0885912L8.85355 0.146447C9.02712 0.320013 9.0464 0.589437 8.91141 0.784306L8.85355 0.853553L4.85355 4.85355C4.67999 5.02712 4.41056 5.0464 4.21569 4.91141L4.14645 4.85355L0.146447 0.853553C-0.0488155 0.658291 -0.0488155 0.341709 0.146447 0.146447Z" fill="white"/>
-                                </svg>                                
-                            </span>
-                        </p>
-                        <nav>
-                            <ul>
-                                <li><a href="">О нас</a></li>
-                                <li><a href="">Доставка и оплата</a></li>
-                                <li><a href="">Обмен и возврат</a></li>
-                                <li><a href="">Контакты</a></li>
-                                <li><a href="">Блог</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                    <div class="footer-nav-list_item">
-                        <p>Контакты 
-                            <span>
-                                <svg width="9" height="5" viewBox="0 0 9 5" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M0.146447 0.146447C0.320013 -0.0271197 0.589437 -0.0464049 0.784306 0.0885912L0.853553 0.146447L4.5 3.793L8.14645 0.146447C8.32001 -0.0271197 8.58944 -0.0464049 8.78431 0.0885912L8.85355 0.146447C9.02712 0.320013 9.0464 0.589437 8.91141 0.784306L8.85355 0.853553L4.85355 4.85355C4.67999 5.02712 4.41056 5.0464 4.21569 4.91141L4.14645 4.85355L0.146447 0.853553C-0.0488155 0.658291 -0.0488155 0.341709 0.146447 0.146447Z" fill="white"/>
-                                </svg>                                
-                            </span>
-                        </p>
-                        <nav>
-                            <ul>
-                                <li>Адрес: Одесса, Промрынок 7км</li>
-                                <li>Tелефон: <a href="tel:+38 (063) 725-47-71">+38 (063) 725-47-71</a></li>
-                                <li>Мы открыты: с 8:00 до 20:00</li>
-                                <li>E-mail info@shlepki.com</li>
-                            </ul>
-                        </nav>
-                    </div>
-                    <div class="footer-nav-list_item">
-                        <p>Личный кабинет
-                            <span>
-                                <svg width="9" height="5" viewBox="0 0 9 5" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M0.146447 0.146447C0.320013 -0.0271197 0.589437 -0.0464049 0.784306 0.0885912L0.853553 0.146447L4.5 3.793L8.14645 0.146447C8.32001 -0.0271197 8.58944 -0.0464049 8.78431 0.0885912L8.85355 0.146447C9.02712 0.320013 9.0464 0.589437 8.91141 0.784306L8.85355 0.853553L4.85355 4.85355C4.67999 5.02712 4.41056 5.0464 4.21569 4.91141L4.14645 4.85355L0.146447 0.853553C-0.0488155 0.658291 -0.0488155 0.341709 0.146447 0.146447Z" fill="white"/>
-                                </svg>                                
-                            </span>
-                        </p>
-                        <nav>
-                            <ul>
-                                <li><a href="">Личный данные</a></li>
-                                <li><a href="">Избранное</a></li>
-                                <li><a href="">Мои заказы</a></li>
-                                <li><a href="">Просмотренные товары</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                    <div class="footer-sign-up">
-                        <div class="footer-sign-up_title">Подпишитесь на нашу рассылку:</div>
-                        <div class="footer-sign-up_label">Чтоб быть всегда в курсе о предстоящих распродажах и предложениях. Подпишитесь на рассылку.</div>
-                        <form action="">
-                            <label for="emailSignUp">
-                                <input type="email" name="emailSignUp" id="emailSignUp" placeholder="Ведите ва email" required>
-                                <button type="submit">
-                                    <svg width="10" height="18" viewBox="0 0 10 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M1 1L9 9L1 17" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                    </svg>
-                                </button>
-                            </label>
-                        </form>
-                    </div>
-                </div>
-                <!-- FOOTER FORM -->
-             </div>
-             <div class="footer-payments">
-                <a href="">
-                    <img src="img/icons/logo_footer.svg" alt="">
-                </a>
-                <div class="footer-payments_wrapper">
-                    <p>Мы прынимаем</p>
-                    <img src="img/icons/visa.svg" alt="">
-                    <img src="img/icons/mastercard.svg" alt="">
-                    <img src="img/icons/maestro.svg" alt="">
-                    <img src="img/icons/paypal.svg" alt="">
-                </div>
+<footer>
+    <div class="footer-wrapper">
+        <div class="footer-nav-list">
+            <div class="footer-nav-list_item">
+                <p>Информация
+                    <span>
+                        <svg width="9" height="5" viewBox="0 0 9 5" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M0.146447 0.146447C0.320013 -0.0271197 0.589437 -0.0464049 0.784306 0.0885912L0.853553 0.146447L4.5 3.793L8.14645 0.146447C8.32001 -0.0271197 8.58944 -0.0464049 8.78431 0.0885912L8.85355 0.146447C9.02712 0.320013 9.0464 0.589437 8.91141 0.784306L8.85355 0.853553L4.85355 4.85355C4.67999 5.02712 4.41056 5.0464 4.21569 4.91141L4.14645 4.85355L0.146447 0.853553C-0.0488155 0.658291 -0.0488155 0.341709 0.146447 0.146447Z"
+                                fill="white" />
+                        </svg>
+                    </span>
+                </p>
+                <nav>
+                    <ul>
+                        <li><a href="">О нас</a></li>
+                        <li><a href="">Доставка и оплата</a></li>
+                        <li><a href="">Обмен и возврат</a></li>
+                        <li><a href="">Контакты</a></li>
+                        <li><a href="">Блог</a></li>
+                    </ul>
+                </nav>
             </div>
-         </footer>
+            <div class="footer-nav-list_item">
+                <p>Контакты
+                    <span>
+                        <svg width="9" height="5" viewBox="0 0 9 5" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M0.146447 0.146447C0.320013 -0.0271197 0.589437 -0.0464049 0.784306 0.0885912L0.853553 0.146447L4.5 3.793L8.14645 0.146447C8.32001 -0.0271197 8.58944 -0.0464049 8.78431 0.0885912L8.85355 0.146447C9.02712 0.320013 9.0464 0.589437 8.91141 0.784306L8.85355 0.853553L4.85355 4.85355C4.67999 5.02712 4.41056 5.0464 4.21569 4.91141L4.14645 4.85355L0.146447 0.853553C-0.0488155 0.658291 -0.0488155 0.341709 0.146447 0.146447Z"
+                                fill="white" />
+                        </svg>
+                    </span>
+                </p>
+                <nav>
+                    <ul>
+                        <li>Адрес: Одесса, Промрынок 7км</li>
+                        <li>Tелефон: <a href="tel:+38 (063) 725-47-71">+38 (063) 725-47-71</a></li>
+                        <li>Мы открыты: с 8:00 до 20:00</li>
+                        <li>E-mail info@shlepki.com</li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="footer-nav-list_item">
+                <p>Личный кабинет
+                    <span>
+                        <svg width="9" height="5" viewBox="0 0 9 5" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M0.146447 0.146447C0.320013 -0.0271197 0.589437 -0.0464049 0.784306 0.0885912L0.853553 0.146447L4.5 3.793L8.14645 0.146447C8.32001 -0.0271197 8.58944 -0.0464049 8.78431 0.0885912L8.85355 0.146447C9.02712 0.320013 9.0464 0.589437 8.91141 0.784306L8.85355 0.853553L4.85355 4.85355C4.67999 5.02712 4.41056 5.0464 4.21569 4.91141L4.14645 4.85355L0.146447 0.853553C-0.0488155 0.658291 -0.0488155 0.341709 0.146447 0.146447Z"
+                                fill="white" />
+                        </svg>
+                    </span>
+                </p>
+                <nav>
+                    <ul>
+                        <li><a href="">Личный данные</a></li>
+                        <li><a href="">Избранное</a></li>
+                        <li><a href="">Мои заказы</a></li>
+                        <li><a href="">Просмотренные товары</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="footer-sign-up">
+                <div class="footer-sign-up_title">Подпишитесь на нашу рассылку:</div>
+                <div class="footer-sign-up_label">Чтоб быть всегда в курсе о предстоящих распродажах и предложениях.
+                    Подпишитесь на рассылку.</div>
+                <form action="">
+                    <label for="emailSignUp">
+                        <input type="email" name="emailSignUp" id="emailSignUp" placeholder="Ведите ва email" required>
+                        <button type="submit">
+                            <svg width="10" height="18" viewBox="0 0 10 18" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M1 1L9 9L1 17" stroke="white" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </button>
+                    </label>
+                </form>
+            </div>
+        </div>
+        <!-- FOOTER FORM -->
+    </div>
+    <div class="footer-payments">
+        <a href="">
+            <img src="img/icons/logo_footer.svg" alt="">
+        </a>
+        <div class="footer-payments_wrapper">
+            <p>Мы прынимаем</p>
+            <img src="img/icons/visa.svg" alt="">
+            <img src="img/icons/mastercard.svg" alt="">
+            <img src="img/icons/maestro.svg" alt="">
+            <img src="img/icons/paypal.svg" alt="">
+        </div>
+    </div>
+</footer>
