--- a/assets/stylesheets/@application.scss
+++ b/assets/stylesheets/@application.scss
@@ -20,3 +20,5 @@
 @import "bem/aboutus/delivery";
 @import "bem/aboutus/obmen";
 @import "bem/aboutus/contacts";
+@import "bem/checkout/checkout";
+@import "bem/checkbox"
