--- a/assets/stylesheets/bem/content.scss
+++ b/assets/stylesheets/bem/content.scss
@@ -1,7 +1,7 @@
 a {
-  &:hover {  
-    @media(min-width: 1196px) {
-      color: #25B4E5;
+  &:hover {
+    @media (min-width: 1196px) {
+      color: #25b4e5;
     }
   }
 }
