--- a/assets/stylesheets/icons.scss
+++ b/assets/stylesheets/icons.scss
@@ -1,27 +1,27 @@
 .i-delete {
-  @include icon('\e900', 'icomoon');
+  @include icon("\e900", "icomoon");
 }
 
 .i-arrow {
-  @include icon('\e901', 'icomoon');
+  @include icon("\e901", "icomoon");
 }
 
 .i-empty-basket {
-  @include icon('\e902', 'icomoon');
+  @include icon("\e902", "icomoon");
 }
 
 .i-location {
-  @include icon('\e903', 'icomoon');
+  @include icon("\e903", "icomoon");
 }
 
 .i-mail {
-  @include icon('\e904', 'icomoon');
+  @include icon("\e904", "icomoon");
 }
 
 .i-phone {
-  @include icon('\e905', 'icomoon');
+  @include icon("\e905", "icomoon");
 }
 
 .i-time {
-  @include icon('\e906', 'icomoon');
+  @include icon("\e906", "icomoon");
 }
