--- a/assets/html/partials/aboutus/aboutus.html
+++ b/assets/html/partials/aboutus/aboutus.html
@@ -16,7 +16,7 @@
                     <p>О нас</p>
                 </div>
             </a>
-            <a  href="delivery.html" class="aboutus__header_item">
+            <a href="delivery.html" class="aboutus__header_item">
                 <div class="aboutus__header_item_img">
                     <img src="img/aboutus/2.svg" alt="">
                 </div>
@@ -24,7 +24,7 @@
                     <p>Доставка и оплата</p>
                 </div>
             </a>
-            <a  href="obmen.html" class="aboutus__header_item">
+            <a href="obmen.html" class="aboutus__header_item">
                 <div class="aboutus__header_item_img">
                     <img src="img/aboutus/3.svg" alt="">
                 </div>
@@ -32,7 +32,7 @@
                     <p>Обмен и возврат</p>
                 </div>
             </a>
-            <a  href="contacts.html" class="aboutus__header_item">
+            <a href="contacts.html" class="aboutus__header_item">
                 <div class="aboutus__header_item_img">
                     <img src="img/aboutus/4.svg" alt="">
                 </div>
@@ -40,7 +40,7 @@
                     <p>Контакты</p>
                 </div>
             </a>
-        </div>  
+        </div>
     </div>
     <div class="aboutus__wrap">
         <div class="container">
@@ -48,7 +48,10 @@
                 <p>O НАС</p>
             </div>
             <div class="aboutus__subtitle">
-                <p>В оптовом интернет-магазине "Shlepki" – только качественная обувь по ценам от производителя. Собираем заказы оперативно и каждую неделю пополняем ассортимент новинками. Хотим, чтобы у вас был большой и разнообразный выбор для покупки. Теперь, чтобы купить обувь оптом в Одессе не нужно никуда ехать! Просто заходите на сайт, выбирайте интересующий вас товар и оформляйте заказ в несколько кликов!</p>
+                <p>В оптовом интернет-магазине "Shlepki" – только качественная обувь по ценам от производителя. Собираем
+                    заказы оперативно и каждую неделю пополняем ассортимент новинками. Хотим, чтобы у вас был большой и
+                    разнообразный выбор для покупки. Теперь, чтобы купить обувь оптом в Одессе не нужно никуда ехать!
+                    Просто заходите на сайт, выбирайте интересующий вас товар и оформляйте заказ в несколько кликов!</p>
             </div>
             <div class="aboutus__list_title">
                 <p>Мы гарантируем:</p>
@@ -61,10 +64,18 @@
                 </ul>
             </div>
             <div class="aboutus__desc">
-                <p>Мужская, женская, детская обувь – весь наш товар закуплен у проверенных надежных производителей – зарубежных и украинских. Мы знаем, что для вас важно предлагать своим покупателям только качественную обувь. Поэтому внимательно относимся к отбору продукции, которую публикуем на сайте для продажи.</p>
-                <p>Приобретайте в магазине <span>"Shlepki"</span> сезонную обувь, спортивную и праздничную. Из натуральной кожи, кожзаменителя, замши или текстиля.</p>
-                <p>Если вы планируете регулярно покупать обувь оптом в Одессе, предлагаем индивидуальные условия сотрудничества. Мы ценим каждого клиента и постоянно организовываем для вас акции и специальные предложения.</p>
-                На весь ассортимент магазина <span>"Shlepki"</span> действует гарантия. А если у вас возникли вопросы, хотите обсудить условия сотрудничества или получить консультацию по ассортименту обуви – звоните! Наши менеджеры помогут сформировать заказ, даже если вы решились на оптовую покупку впервые!
+                <p>Мужская, женская, детская обувь – весь наш товар закуплен у проверенных надежных производителей –
+                    зарубежных и украинских. Мы знаем, что для вас важно предлагать своим покупателям только
+                    качественную обувь. Поэтому внимательно относимся к отбору продукции, которую публикуем на сайте для
+                    продажи.</p>
+                <p>Приобретайте в магазине <span>"Shlepki"</span> сезонную обувь, спортивную и праздничную. Из
+                    натуральной кожи, кожзаменителя, замши или текстиля.</p>
+                <p>Если вы планируете регулярно покупать обувь оптом в Одессе, предлагаем индивидуальные условия
+                    сотрудничества. Мы ценим каждого клиента и постоянно организовываем для вас акции и специальные
+                    предложения.</p>
+                На весь ассортимент магазина <span>"Shlepki"</span> действует гарантия. А если у вас возникли вопросы,
+                хотите обсудить условия сотрудничества или получить консультацию по ассортименту обуви – звоните! Наши
+                менеджеры помогут сформировать заказ, даже если вы решились на оптовую покупку впервые!
             </div>
         </div>
     </div>
