--- a/assets/html/partials/head.html
+++ b/assets/html/partials/head.html
@@ -1,11 +1,12 @@
-   <head>
-      <title>Shlepki</title>
-      <meta charset="UTF-8" />
-      <meta content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0" name="viewport" />
-      <link href="application.css" rel="stylesheet" />
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/css/ion.rangeSlider.min.css"/>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js"></script>
-      <script src="vendor.js"></script>
-      <script src="application.js"></script>
-    
-   </head>
+<head>
+   <title>Shlepki</title>
+   <meta charset="UTF-8" />
+   <meta content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0" name="viewport" />
+   <link href="application.css" rel="stylesheet" />
+   <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/css/ion.rangeSlider.min.css" />
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.1/js/ion.rangeSlider.min.js"></script>
+   <script src="vendor.js"></script>
+   <script src="application.js"></script>
+
+</head>
