--- a/assets/stylesheets/bem/aboutus/obmen.scss
+++ b/assets/stylesheets/bem/aboutus/obmen.scss
@@ -1,11 +1,11 @@
 .obmen {
-    background: linear-gradient(180deg,rgba(29,159,230,.06),#f6f6f6);
-    padding-top: 16px;
-    .aboutus__list {
-        ul {
-            li {
-                padding-bottom: 18px;
-            }
-        }
+  background: linear-gradient(180deg, rgba(29, 159, 230, 0.06), #f6f6f6);
+  padding-top: 16px;
+  .aboutus__list {
+    ul {
+      li {
+        padding-bottom: 18px;
+      }
     }
+  }
 }
