--- a/assets/stylesheets/bem/basket/basket.scss
+++ b/assets/stylesheets/bem/basket/basket.scss
@@ -2,19 +2,24 @@
     max-width: 1196px;
     margin: 0 auto;
 }
+
 a {
     cursor: pointer;
 }
+
 .basket {
-    background: linear-gradient(180deg,rgba(29,159,230,.06),#f6f6f6);
+    background: linear-gradient(180deg, rgba(29, 159, 230, .06), #f6f6f6);
     padding-top: 16px;
+
     .main-bread-crumbs {
         border-bottom: none;
     }
+
     &__wrap {
         margin-top: 15px;
         border-top: 1px solid #fff;
     }
+
     &__title {
         font-weight: 500;
         font-size: 38px;
@@ -23,17 +28,21 @@ a {
         display: flex;
         justify-content: space-between;
         align-items: center;
+
         &_total {
             font-size: 20px;
             line-height: 27px;
             text-transform: uppercase;
+
             span {
                 color: #25B4E5;
             }
         }
     }
+
     &__list {
         padding-bottom: 23px;
+
         &_header {
             display: flex;
             align-items: center;
@@ -42,31 +51,39 @@ a {
             height: 36px;
             margin-bottom: 8px;
             padding-left: 133px;
+
             &_item {
                 font-size: 12px;
                 line-height: 14px;
                 color: #929292;
                 font-family: var(--Fira-font);
+
                 &_kod {
                     width: 152px;
                 }
+
                 &_name {
                     width: 228px;
                 }
+
                 &_nal {
                     width: 128px;
                 }
+
                 &_price {
                     width: 120px;
+
                     &-box {
-                        width: 126px;  
+                        width: 126px;
                     }
                 }
+
                 &_amount {
                     width: 153px;
                 }
             }
         }
+
         &_item {
             display: flex;
             align-items: center;
@@ -75,19 +92,23 @@ a {
             height: 64px;
             margin-bottom: 8px;
             padding-left: 44px;
+
             div {
                 overflow: hidden;
             }
+
             &_img {
                 width: 46px;
                 height: 46px;
                 margin-right: 43px;
+
                 img {
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
                 }
             }
+
             &_kod {
                 font-family: var(--Fira-font);
                 font-size: 13px;
@@ -95,10 +116,12 @@ a {
                 color: #929292;
                 width: 152px;
             }
+
             &_name {
                 font-family: Open Sans;
                 width: 228px;
             }
+
             &_nal {
                 font-family: var(--Fira-font);
                 font-size: 15px;
@@ -106,11 +129,13 @@ a {
                 color: #05C35C;
                 width: 128px;
             }
+
             &_price {
                 font-family: var(--Fira-font);
                 font-size: 15px;
                 line-height: 18px;
                 width: 120px;
+
                 &-box {
                     font-family: var(--Fira-font);
                     font-size: 15px;
@@ -118,8 +143,10 @@ a {
                     width: 120px;
                 }
             }
+
             &_counter {
                 width: 159px;
+
                 &_wrap {
                     border: 1px solid #DAE0E6;
                     border-radius: 5px;
@@ -127,6 +154,7 @@ a {
                     height: 32px;
                     display: flex;
                     justify-content: space-between;
+
                     button {
                         width: 23px;
                         background: #FAFAFA;
@@ -135,20 +163,24 @@ a {
                         display: flex;
                         align-items: center;
                         justify-content: center;
+
                         &:first-child {
                             i {
                                 transform: rotateY(-190deg);
                             }
                         }
+
                         i {
                             color: #BDBDBD;
                         }
+
                         &:hover {
                             i {
                                 color: #4F4F4F;
                             }
                         }
                     }
+
                     input {
                         width: 50px;
                         border: none;
@@ -161,27 +193,32 @@ a {
                     }
                 }
             }
+
             &_summ {
                 font-size: 15px;
                 line-height: 18px;
                 width: 96px;
             }
+
             &_remove {
-                 button {
-                     background: none;
-                     border: none;
-                     i {
+                button {
+                    background: none;
+                    border: none;
+
+                    i {
                         color: #5C6773;
-                     }
-                 }
+                    }
+                }
             }
         }
     }
+
     &__footer {
         display: flex;
         flex-direction: column;
         align-items: flex-end;
         padding-bottom: 50px;
+
         &_total {
             font-size: 18px;
             line-height: 24px;
@@ -189,15 +226,18 @@ a {
             color: #5C6773;
             font-family: Fira Sans Condensed;
             padding-bottom: 20px;
+
             span {
                 color: #1D9FE6;
                 font-size: 34px;
                 line-height: 44px;
             }
         }
+
         &_btns {
             display: flex;
         }
+
         &_btn {
             font-weight: 600;
             font-size: 13px;
@@ -214,6 +254,7 @@ a {
             background: #F6F6F6;
             cursor: pointer;
             display: block;
+
             &:last-child {
                 background: #25B4E5;
                 box-shadow: 0px 2px 10px rgba(41, 96, 204, 0.3), 0px 2px 4px rgba(41, 96, 204, 0.3);
@@ -221,14 +262,17 @@ a {
             }
         }
     }
+
     &__empty {
         padding-bottom: 89px;
         display: none;
+
         .container {
             display: flex;
             flex-direction: column;
             align-items: center;
         }
+
         &_icon {
             font-size: 66px;
             margin-bottom: 13px;
@@ -237,18 +281,21 @@ a {
             align-items: center;
             color: #25B4E5;
         }
+
         &_title {
             font-size: 38px;
             line-height: 46px;
             padding-top: 13px;
             padding-bottom: 14px;
         }
+
         &_subtitle {
             font-size: 16px;
             line-height: 22px;
             color: #5C6773;
             padding-bottom: 34px;
         }
+
         &_btn {
             background: #25B4E5;
             box-shadow: 0px 2px 10px rgba(41, 96, 204, 0.3), 0px 2px 4px rgba(41, 96, 204, 0.3);
@@ -264,6 +311,7 @@ a {
             text-transform: uppercase;
             color: #FFFFFF;
         }
+
         &.visible {
             display: block;
         }
