--- a/assets/stylesheets/bem/header.scss
+++ b/assets/stylesheets/bem/header.scss
@@ -10,7 +10,7 @@
   width: 60px;
   height: 60px;
   line-height: 60px;
-  background: #6CBE45;
+  background: #6cbe45;
   color: #fff;
   text-align: center;
   position: relative;
@@ -20,6 +20,6 @@
     font-size: 24px;
   }
   &:hover {
-    background: #5CA43A;
+    background: #5ca43a;
   }
 }
